Add styling for the exons control panel

--- a/widgets/htdocs/components/95_AFDB.css
+++ b/widgets/htdocs/components/95_AFDB.css
@@ -3,6 +3,7 @@
   --main-v-dark: [[MAIN_V_DARK]];
   --main-light: [[MAIN_LIGHT]];
   --main-medium: [[MAIN_MEDIUM]];
+  --pale-grey: [[PALE_GREY]];
   --dark-grey: [[DARK_GREY]];
   --white: [[WHITE]];
 }
