Do not use shadow DOM for the top-level component

--- a/widgets/htdocs/components/95_AFDB.css
+++ b/widgets/htdocs/components/95_AFDB.css
@@ -7,3 +7,24 @@
   --dark-grey: [[DARK_GREY]];
   --white: [[WHITE]];
 }
+
+ensembl-alphafold-viewer .container {
+  display: grid;
+  grid-template-columns: [molstar-canvas] 800px [controls] minmax(300px, max-content);
+  grid-column-gap: 20px;
+}
+
+.molstar-canvas {
+  grid-column: molstar-canvas;
+  position: relative;
+  width: 800px;
+  height: 600px;
+  margin-top: 96px; /* <-- to accommodate the sequence element, which has an absolute position and is shifted to the top */
+}
+
+ensembl-alphafold-viewer .controls {
+  grid-column: controls;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
